# colorplate

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASING.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml  release.yml
colorplate/: __init__.py  classify.py  cli.py  config.py  mesh.py  pipeline.py  printability.py  raster.py  stack.py
colorplate/web/: __init__.py  analytics.py  server.py  service.py
colorplate/web/static/: app.jsx  colorconfig.jsx  controls.jsx  emblem.jsx  icons.jsx  index.html  three-preview.jsx  tour.jsx
tests/: conftest.py  test_analytics.py  test_api.py  test_classify.py  test_cli.py  test_color_helpers.py  test_fill_holes.py  test_mesh3d.py  test_mesh_builder.py  test_pipeline.py  test_printability.py  test_quantize.py  test_raster.py  test_service_generate.py  test_stack_export.py
