[project]
name = "colorplate"
version = "0.3.0"
description = "Turn SVG/PNG artwork into layered, gap-free multicolor STL plates for face-down multi-material 3D printing."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
    "scipy>=1.10",
    "opencv-python-headless>=4.8",
    "shapely>=2.0",
    "trimesh>=4.0",
    "mapbox-earcut>=1.0",
    "cairosvg>=2.7",
]

[project.optional-dependencies]
# Only needed for auto color discovery on rasters without a known palette.
auto = ["scikit-learn>=1.3"]
# Browser GUI (`colorplate-web`) that drives the real pipeline.
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]
# Test suite (run with `pytest`). Builds on the web extra for the API tests.
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
colorplate = "colorplate.cli:main"
colorplate-web = "colorplate.web.server:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["colorplate*"]

[tool.setuptools.package-data]
colorplate = ["web/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
